--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!-- built with temper: https://temper.one -->
 <!DOCTYPE html>
 <html>
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>T4Seen</title>
+  <title>Ta-Seen's Homepage</title>
 
   
     <link class="googlefont" href="
@@ -115,11 +114,5 @@
                                 <p style="animation-delay: 1s;">Here’s a <a target="_blank" href="https://youtu.be/xGy_IiNLATc">parting gift</a>.</p>
                                                                                                                                   <p class="branding" style="animation-delay: 1.1s;"><a href="https://temper.one/" target="_blank">built with temper</a></p>
       </div>
-
-  <!-- DON’T REMOVE THE FOLLOWING LINES! -->
-  <script type="text/javascript">const fs = 3.85;</script>
-  <script type="text/javascript" src="https://temper.one/temper-2411.js"></script>
-  <script type="text/javascript" src="https://static.getslideframe.com/slideFrame.min.js"></script>
-
 </body>
 </html>
