--- a/index.html
+++ b/index.html
@@ -112,7 +112,13 @@
                                 <p style="animation-delay: 0.8s;">Manga you should read: <a target="_blank" href="https://comick.io/comic/02-kaoru-hana-wa-rin-to-saku">The Fragrant Flower Blooms with Dignity</a></p>
                                 <p style="animation-delay: 0.9s;">Anyways that's all I have in here for now, I'll add more stuff once I feel like it.</p>
                                 <p style="animation-delay: 1s;">Here’s a <a target="_blank" href="https://youtu.be/xGy_IiNLATc">parting gift</a>.</p>
-                                                                                                                                  <p class="branding" style="animation-delay: 1.1s;"><a href="https://temper.one/" target="_blank">built with temper</a></p>
-      </div>
+  </div>
+
+  
+   <!-- DON’T REMOVE THE FOLLOWING LINES! -->
+   <script type="text/javascript">const fs = 3.85;</script>
+   <script type="text/javascript" src="https://temper.one/temper-2411.js"></script>
+   <script type="text/javascript" src="https://static.getslideframe.com/slideFrame.min.js"></script>
+  
 </body>
 </html>
